--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,3 +1,4 @@
+/*src\assets\styles.css*/
 /* Importar la fuente Comfortaa */
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap');
 
